e2e/npd/fixtures/testdata/mock-commands/dns/iptables-save
#!/bin/bash
# Mock iptables-save for CoreDNS IP discovery
cat <<END
# Generated by iptables-save v1.6.1 on Mon Jul 14 18:48:48 2025
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:KUBE-SERVICES - [0:0]
-A KUBE-SERVICES -d 10.0.0.10/32 -p tcp -m comment --comment "kube-system/kube-dns:dns-tcp cluster IP" -m tcp --dport 53 -j KUBE-SVC-TCOU7JCQXEZGVUNU
-A KUBE-SERVICES -d 10.0.0.10/32 -p udp -m comment --comment "kube-system/kube-dns:dns cluster IP" -m udp --dport 53 -j KUBE-SVC-ERIFXISQEP7F7OF4
COMMIT
# Completed on Mon Jul 14 18:48:48 2025
END
